--- a/.github/workflows/build-ffmpeg.yml
+++ b/.github/workflows/build-ffmpeg.yml
@@ -126,6 +126,32 @@ jobs:
           name: linux-x64
           path: linux-x64
 
+  build-android:
+    name: Build Android
+    runs-on: ubuntu-22.04
+    strategy:
+      matrix:
+        arch:
+          - armeabi-v7a
+          - arm64-v8a
+          - x86
+          - x86_64
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Build
+        run: osu.Framework.NativeLibs/scripts/ffmpeg/build-android.sh
+        env:
+          arch: ${{ matrix.arch }}
+
+      - name: Upload
+        uses: actions/upload-artifact@v4
+        with:
+          name: android-${{ matrix.arch }}
+          path: android-${{ matrix.arch }}
+
   make-pr:
     name: Create pull request
     runs-on: ubuntu-22.04
@@ -134,6 +160,7 @@ jobs:
       - build-win
       - build-win-arm64
       - build-linux
+      - build-android
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -158,6 +185,22 @@ jobs:
         with:
           name: win-x86
           path: osu.Framework.NativeLibs/runtimes/win-x86/native
+      - uses: actions/download-artifact@v4
+        with:
+          name: android-armeabi-v7a
+          path: osu.Framework.Android/armeabi-v7a
+      - uses: actions/download-artifact@v4
+        with:
+          name: android-arm64-v8a
+          path: osu.Framework.Android/arm64-v8a
+      - uses: actions/download-artifact@v4
+        with:
+          name: android-x86
+          path: osu.Framework.Android/x86
+      - uses: actions/download-artifact@v4
+        with:
+          name: android-x86_64
+          path: osu.Framework.Android/x86_64
 
       - uses: peter-evans/create-pull-request@v6
         with:
