--- a/.github/workflows/build-ffmpeg.yml
+++ b/.github/workflows/build-ffmpeg.yml
@@ -29,7 +29,7 @@ jobs:
           path: macOS-${{ matrix.arch }}
 
   combine-macos:
-    name: Combine macOS libs
+    name: Combine macOS dylibs
     runs-on: macos-12
     needs: build-macos
     steps:
@@ -47,6 +47,8 @@ jobs:
 
       - name: Combine
         run: osu.Framework.NativeLibs/scripts/ffmpeg/combine_dylibs.sh
+        env:
+          platform: macOS
 
       - name: Upload
         uses: actions/upload-artifact@v4
@@ -83,6 +85,34 @@ jobs:
         with:
           name: iOS-${{ matrix.arch }}
           path: iOS-${{ matrix.arch }}
+
+  combine-iOS:
+    name: Combine iOS dylibs
+    runs-on: macos-12
+    needs: build-iOS
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - uses: actions/download-artifact@v4
+        with:
+          name: iOS-x86_64
+          path: iOS-x86_64
+      - uses: actions/download-artifact@v4
+        with:
+          name: iOS-arm64
+          path: iOS-arm64
+
+      - name: Combine
+        run: osu.Framework.NativeLibs/scripts/ffmpeg/combine_dylibs.sh
+        env:
+          platform: iOS
+
+      - name: Upload
+        uses: actions/upload-artifact@v4
+        with:
+          name: iOS-universal
+          path: iOS-universal
 
   build-win:
     name: Build Windows
