--- a/.github/workflows/build-ffmpeg.yml
+++ b/.github/workflows/build-ffmpeg.yml
@@ -107,6 +107,7 @@ jobs:
   build-linux:
     name: Build Linux (x64)
     # Use 20.04 to target glibc 2.31 like the other native libs
+    # heh.....
     runs-on: ubuntu-20.04
     steps:
       - name: Install dependencies
