--- a/.github/workflows/build-ffmpeg.yml
+++ b/.github/workflows/build-ffmpeg.yml
@@ -80,6 +80,12 @@ jobs:
         env:
           arch: ${{ matrix.arch }}
 
+      - name: (TEMP) Upload ffbuild folder
+        uses: actions/upload-artifact@v4
+        with:
+          name: iOS-${{ matrix.arch }}-ffbuild
+          path: iOS-${{ matrix.arch }}-build/ffbuild
+
       - name: Upload
         uses: actions/upload-artifact@v4
         with:
